--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -17,7 +17,7 @@
 @include font-face("KaushanScript", "../fonts/Kaushan_Script/KaushanScript-Regular");
 @include font-face("Montserrat", "../fonts/Montserrat/Montserrat-Regular", 400);
 @include font-face("Montserrat", "../fonts/Montserrat/Montserrat-Bold", 700);
-@include font-face("Roboto", "../fonts/Roboto/Roboto-LightItalic", 300);
+@include font-face("RobotoItalic", "../fonts/Roboto/Roboto-LightItalic", 300);
 @include font-face("Roboto", "../fonts/Roboto/Roboto-Regular", 400);
 
 @include font-face("Roboto", "../fonts/icon/icomoon");
