--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,5 +1,6 @@
 // font
-$f-prim: "Roboto", sans-serif;//300italic, 400
+$f-prim: "Roboto", sans-serif;// 400
+$f-prim-i: "RobotoItalic", sans-serif;//300italic
 $f-second: "Montserrat", sans-serif;//400,700
 $f-decor: "KaushanScript", serif;
 
