--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -4,20 +4,19 @@
     margin: 0 auto;
 }
 
-%icon-pos {
-    position: absolute;
-    top: 0;
-    left: 25px;
+// %icon-pos {
+//     position: absolute;
+//     top: 0;
+//     left: 25px;
 
-    width: 40px;
-    height: 40px;
-}
+//     width: 40px;
+//     height: 40px;
+// }
 
 
 %reset-ul {
     margin: 0;
     padding: 0;
-
     list-style-type: none;
 }
 
