--- a/src/style/_media.scss
+++ b/src/style/_media.scss
@@ -23,8 +23,35 @@
 
     // ============================================================ header
 
-    .nav {
-        display: none;
+    .menu {
+        display: flex;
+        
+        position: fixed;
+        top: 100px;
+        width: 0;
+        right: 0;
+        bottom: 0;    
+        flex-direction: column;
+        align-items: center;
+        background: linear-gradient(to bottom, rgba(232, 138, 130, 0.1) 0, rgba(232, 138, 130, 0.95) 10%);
+        z-index: 100;
+    
+        li {
+            margin-top: 40px;
+            margin-left: 0;
+            display: none;
+        }
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .menu_active {
+        width: 100%;
+        li {
+            display: block;
+        }
     }
 
     // ============================================================ banner
@@ -65,13 +92,13 @@
     // ============================================================ service
     .service-item {
         flex-basis: calc(100% / 2);
-    
+
         &:nth-child(-n + 4)::after {
             content: "";
             position: absolute;
             bottom: -44px;
             left: 0;
-    
+
             width: 100%;
             height: 1px;
             background-color: $c-grey-4;
@@ -305,9 +332,11 @@
         padding: 30px 0;
 
         border-right: none;
+
         &:first-child {
             padding-top: 50px;
         }
+
         &:last-child {
             padding-bottom: 50px;
         }
@@ -329,13 +358,13 @@
 
     .service-item {
         flex-basis: 100%;
-    
+
         &:nth-child(-n + 5)::after {
             content: "";
             position: absolute;
             bottom: -44px;
             left: 0;
-    
+
             width: 100%;
             height: 1px;
             background-color: $c-grey-4;
@@ -373,4 +402,10 @@
     .blog-item {
         width: 100%;
     }
+
+    // ============================================================ up
+    .up {
+        bottom: 1px;
+        right: 5px;
+      }
 }
