--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,8 +1,9 @@
-// @import "../libs/normalize.css";
 @import "/node_modules/normalize.css/normalize.css";
 @import "mixins";
 @import "fonts";
 @import "vars";
+@import "preloader";
+@import "hamburgers";
 
 *,
 *::before,
@@ -57,7 +58,7 @@ h3 {
     background-position: center center;
     background-size: cover;
     background-clip: border-box;
- 
+
     &::after {
         content: "";
         position: absolute;
@@ -77,6 +78,13 @@ h3 {
 .inner {
     width: 100%;
     max-width: 1200px;
+}
+
+.trans,
+.trans *,
+.trans *::before,
+.trans *::after {
+    transition: .3s;
 }
 
 // ============================================================ header
@@ -105,12 +113,14 @@ h3 {
     color: #ffffff;
 }
 
-.nav {
+.menu {
     display: flex;
+    li {
+        margin-left: 55px;
+    }
 }
 
-.nav__link {
-    margin-left: 55px;
+.menu__link {
     padding-bottom: 12px;
 
     font-weight: 400;
@@ -126,10 +136,14 @@ h3 {
     }
 }
 
-.nav__link_active {
+.menu__link_active {
     color: $c-yellow;
 
     border-bottom-color: $c-yellow;
+}
+
+.hamburger {
+    display: none;
 }
 
 // ============================================================ banner
@@ -156,7 +170,7 @@ h3 {
     }
 
     * {
-        z-index: 10;
+        z-index: 1;
     }
 }
 
@@ -227,7 +241,7 @@ h3 {
     }
 }
 
-.banner-nav {
+.banner-tab {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -241,8 +255,9 @@ h3 {
     }
 }
 
-.banner-nav__link {
+.banner-tab__link {
     position: relative;
+    cursor: pointer;
 
     display: block;
     padding: 25px 0;
@@ -258,7 +273,7 @@ h3 {
     }
 }
 
-.banner-nav__link_active {
+.banner-tab__link_active {
     opacity: 1;
 
     &::before {
@@ -292,6 +307,7 @@ h3 {
     font-size: 24px;
     font-family: $f-decor;
     color: $c-grey-1;
+    font-weight: 400;
 
     span {
         display: block;
@@ -317,8 +333,7 @@ h3 {
     }
 }
 
-.caption__text {
-}
+.caption__text {}
 
 .img-list {
     display: flex;
@@ -552,8 +567,7 @@ h3 {
     }
 }
 
-.service2-list {
-}
+.service2-list {}
 
 .service2-item {
     position: relative;
@@ -640,6 +654,7 @@ h3 {
 
 .control_left {
     margin-right: 50px;
+
     &::after {
         left: 20px;
 
@@ -649,6 +664,7 @@ h3 {
 
 .control_right {
     margin-left: 50px;
+
     &::after {
         right: 20px;
 
@@ -656,8 +672,7 @@ h3 {
     }
 }
 
-.quote-list {
-}
+.quote-list {}
 
 .quote-item {
     display: none;
@@ -679,6 +694,7 @@ h3 {
     margin-right: 40px;
 
     border: 3px solid $c-prim;
+
     span {
         margin: auto;
 
@@ -932,8 +948,7 @@ h3 {
     }
 }
 
-.clients-item__about {
-}
+.clients-item__about {}
 
 // ============================================================ blog
 
@@ -991,11 +1006,9 @@ h3 {
     }
 }
 
-.blog-item__text {
-}
+.blog-item__text {}
 
-.blog-item__title {
-}
+.blog-item__title {}
 
 .blog-item__desc {
     padding-bottom: 15px;
@@ -1003,8 +1016,7 @@ h3 {
     border-bottom: 1px solid $c-grey-4;
 }
 
-.blog-item__meta {
-}
+.blog-item__meta {}
 
 .blog-item__icon {
     position: relative;
@@ -1036,7 +1048,7 @@ h3 {
     }
 }
 
-// ============================================================ work
+// ============================================================ map
 
 .map-wrap {
     position: relative;
@@ -1110,15 +1122,16 @@ h3 {
     }
 }
 
-.map {
+.map__box {
     display: none;
     width: 100%;
     height: 500px;
     margin-top: 50px;
 }
 
-.map_active {
-    display: block;
+.map {
+    width: 100%;
+    height: 500px;
 }
 
 // ============================================================ footer
@@ -1149,8 +1162,7 @@ h3 {
     color: $c-grey-3;
 }
 
-.footer-mogo__text {
-}
+.footer-mogo__text {}
 
 .footer-socials {
     width: 50%;
@@ -1194,6 +1206,9 @@ h3 {
     font-size: 16px;
     color: $c-prim;
     text-decoration: none;
+    &:hover {
+        color: $c-second;
+    }
 }
 
 .footer-copy {
@@ -1201,5 +1216,27 @@ h3 {
     text-align: center;
     color: $c-grey-1;
 }
+
+.up {
+    color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    position: fixed;
+    z-index: 99;
+    display: none;
+    bottom: 1px;
+    right: 8%;
+    background-color: $c-prim;
+    opacity: 0.6;
+    padding: 10px;
+    border-radius: 50%;
+    span {
+        font-size: 20px;
+        color: #ffffff;
+        text-transform: uppercase;
+    }
+    &:hover {
+        opacity: 1;
+    }
+  }
 
 @import "media.scss";
