--- a/src/style/_media.scss
+++ b/src/style/_media.scss
@@ -202,7 +202,7 @@
 
     // ============================================================ quote
 
-    .quote-item_active {
+    .quote-item {
         flex-direction: column;
     }
 
