--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,6 +4,7 @@
 @import "vars";
 @import "preloader";
 @import "hamburgers";
+@import "/node_modules/slick-carousel/slick/slick.css";
 
 *,
 *::before,
@@ -115,6 +116,7 @@ h3 {
 
 .menu {
     display: flex;
+
     li {
         margin-left: 55px;
     }
@@ -136,11 +138,11 @@ h3 {
     }
 }
 
-.menu__link_active {
-    color: $c-yellow;
+// .menu__link_active {
+//     color: $c-yellow;
 
-    border-bottom-color: $c-yellow;
-}
+//     border-bottom-color: $c-yellow;
+// }
 
 .hamburger {
     display: none;
@@ -257,7 +259,6 @@ h3 {
 
 .banner-tab__link {
     position: relative;
-    cursor: pointer;
 
     display: block;
     padding: 25px 0;
@@ -266,6 +267,7 @@ h3 {
     text-transform: uppercase;
 
     border-top: 3px solid #ffffff;
+    cursor: pointer;
     opacity: .7;
 
     &:hover {
@@ -304,10 +306,10 @@ h3 {
 
     margin-bottom: 90px;
 
+    font-weight: 400;
     font-size: 24px;
     font-family: $f-decor;
     color: $c-grey-1;
-    font-weight: 400;
 
     span {
         display: block;
@@ -621,18 +623,22 @@ h3 {
     background-color: #f8f8f8;
 }
 
-.quote-inner {
+.quote-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.control {
+.slick-prev,
+.slick-next {
     position: relative;
 
     width: 60px;
     height: 60px;
 
+    background-color: transparent;
+    border: none;
+    outline: none;
     cursor: pointer;
 
     &::after {
@@ -652,7 +658,7 @@ h3 {
     }
 }
 
-.control_left {
+.slick-prev {
     margin-right: 50px;
 
     &::after {
@@ -662,7 +668,7 @@ h3 {
     }
 }
 
-.control_right {
+.slick-next {
     margin-left: 50px;
 
     &::after {
@@ -672,14 +678,8 @@ h3 {
     }
 }
 
-.quote-list {}
-
 .quote-item {
-    display: none;
-}
-
-.quote-item_active {
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
     align-items: center;
 }
@@ -1206,6 +1206,7 @@ h3 {
     font-size: 16px;
     color: $c-prim;
     text-decoration: none;
+
     &:hover {
         color: $c-second;
     }
@@ -1218,25 +1219,30 @@ h3 {
 }
 
 .up {
-    color: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
     position: fixed;
-    z-index: 99;
-    display: none;
-    bottom: 1px;
     right: 8%;
-    background-color: $c-prim;
-    opacity: 0.6;
+    bottom: 1px;
+    z-index: 99;
+
+    display: none;
     padding: 10px;
+
+    color: rgba(0, 0, 0, .5);
+
+    background-color: $c-prim;
     border-radius: 50%;
+    cursor: pointer;
+    opacity: .6;
+
     span {
         font-size: 20px;
         color: #ffffff;
         text-transform: uppercase;
     }
+
     &:hover {
         opacity: 1;
     }
-  }
+}
 
 @import "media.scss";
