--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -892,7 +892,7 @@ h3 {
 // ============================================================ clients
 
 .clients-wrap {
-    background-image: url("../img/bg-clients.png");
+    background-image: url("../img/bg-clients.jpg");
 }
 
 .clients-list {
