--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,10 @@
-@import "/node_modules/normalize.css/normalize.css";
+// @import "/node_modules/normalize.css/normalize.css";
 @import "mixins";
 @import "fonts";
 @import "vars";
 @import "preloader";
 @import "hamburgers";
-@import "/node_modules/slick-carousel/slick/slick.css";
+// @import "/node_modules/slick-carousel/slick/slick.css";
 
 *,
 *::before,
